# Rever

./: README.md  django.env.example  pyproject.toml
config/: settings.py  urls.py
revision/: admin.py  models.py  problemGen.py  urls.py  views.py
revision/migrations/: 0001_initial.py  0002_solved_delete_problem.py  0003_solved_user.py
templates/: base.html  navbar.html
templates/RevisionApp/: Controls.html  problem_list.html
templates/RevisionApp/snippets/: messages.html
templates/home/: cards.html  features.html  index.html
