[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
Django = "^4.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.1"
django-htmx = "^1.22.0"
django-template-partials = "^24.4"
pillow = "^11.1.0"
langchain-google-genai = "^2.0.11"
langchain-ollama = "^0.2.3"
langchain-groq = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

